Fixed "getStartedButton" being partly not visible.

--- a/AngularTutorial.Web/Content/Site.less
+++ b/AngularTutorial.Web/Content/Site.less
@@ -119,6 +119,7 @@ footer {
     font-size: 3em;
     padding-right: 2em;
     padding-left: 2em;
+    margin-bottom: 1em;
 }
 
 .getStartedButtonXs {
